added rg and ARM stuff

--- a/WebAppDB/appsettings.json
+++ b/WebAppDB/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebAppDB-D3994969-B784-48C0-9D28-7F2E0B1B26BF;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "WebAppContext": "Server=(localdb)\\mssqllocaldb;Database=aspnet-WebAppDB-D3994969-B784-48C0-9D28-7F2E0B1B26BF;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
